-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.0
-
Windows 8.1 Runtime
-
-
8a7311532ba331252d87cbcc08ea676f106242e9
When using a pen as input on the Surface Pro or similar device, it should behave like a mouse when using with Widgets or Quick. This isn't happening, likely because the pen event is ignored. The event may need to be re-sent as a mouse event to get the correct behavior.
- relates to
-
QTBUG-47007 mousePressEvent of QWidget gets called even though QTabletEvent was accepted [Qt 5.4.2]
-
- Closed
-
-
QTBUG-54399 [Reg: 5.6 -> 5.7] Wrong position in mousePressEvent and mouseMoveEvent for Wacom pen tablets
-
- Closed
-
-
QTBUG-51617 QMouseEvent::source() reports MouseEventNotSynthesized when it comes from a Wacom tablet
-
- Closed
-
| For Gerrit Dashboard: QTBUG-38681 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 154383,5 | winrt: Refactor pointer device handling to support pen | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |